# Predictive-Churn-Management-Data-Driven-Customer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Makefile  README.md  Taskfile.yml  clustering.py  customer_segmentation.ipynb  data.dvc  deploy.sh  docker-compose.observability.yaml  docker-compose.stack.yml  docker-compose.yml  main.py  models.py  mypy.ini  pyproject.toml  requirements.txt  runner.py
ChurnPrediction_API/: pyproject.toml
Data/: customer.csv  customer_segmentation.csv
Scripts/: data_preprocessing.py  exploratory_analysis.py
alertmanager/: alertmanager.yml
api/: config.py  events.py  model_loader.py  monitor.py  predictor.py  routes.py  schema.py  secure.py
api/connectors/: minio_connection_checker.py
api/core/: data_transformer.py
api/events/: event.py  model_manager.py
api/logs/: efk_logger.py
api/mapping/: churn.json
api/models_loaders/: mlflow_model_loader.py  models_loader.py
api/monitors/api_metric/: otel_instrumentation.py  otel_metrics.py  otel_setup.py  otel_tracing.py
api/monitors/model/: model_metrics.py
api/router/: routes.py
api/routers/: metrics_router.py  routes.py
api/schemas/: schema.py
api/service/: predictor.py
api/services/: output_message.py  predictor.py
api/utils/: config.py  secure.py
architecture/: diagram.py
customers_segmentation/: clustering.py
filebeat/: filebeat.yml
notebooks/: clustering.ipynb  exploratory.ipynb  models.ipynb
output_api/data_validated/: example_1  example_2  example_3  example_4  example_5
output_api/prediction_output/: example_2  example_3
prometheus/: alert.rules.yml  prometheus.yml
scripts/: model.py
tests/: request_test.py  schema_test.py  test_joblib_bentoml_models_loader.py  test_minio_connection.py  test_mlflow_loader.py  test_models_loaders.py
train_pipeline/: config.py  data_loader.py  predict_eval.py  preprocessing.py  training.py
trainer/: config.py  data_loader.py  extract_cols.py  predEvalSave.py
trainer/evaluation/: predEvalSave.py
trainer/monitor/: monitor.py
trainer/preprocessing/: preprocessing.py
trainer/training/: training.py
