[tool.poetry]
name = "ChurnPredictionServer"
version = "0.1.0"
description = "ML-powered Churn Prediction API with FastAPI, MLflow (with BentoML fallback), Docker, and Jenkins CI/CD"
authors = ["Abdias Arsène <abdiasarsene@email.com>"]
readme = "README.md"
packages = [{ include = "ChurnPrediction_API" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
scikit-learn = "^1.5"
fastapi = "^0.111"
starlette = "^0.37"
pydantic = "^2.7"
mlflow = "^2.16"                           # complet pour tracking et serving
bentoml = "^1.2"                           # fallback si MLflow tombe
prometheus-client = "^0.20"
prometheus-fastapi-instrumentator = "^6.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pre-commit = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
